--- a/deploy/crs/broker_v2alpha1_activemqartemis_cr.yaml
+++ b/deploy/crs/broker_v2alpha1_activemqartemis_cr.yaml
@@ -8,8 +8,8 @@ metadata:
     application: example-activemqartemis-app
 spec:
   deploymentPlan:
-    size: 1
-    image: docker-registry.default.svc:5000/olm75-0/amq-broker-74-openshift:9.8
+    size: 0
+    image: docker-registry.default.svc:5000/entmqbr-2687-0/amq-broker-74-openshift:9.8
     #image: docker-registry.default.svc:5000/entmqbr-2687-0/amq-broker:7.4-5
     #image: registry.redhat.io/amq7/amq-broker:7.4
     #user: adminUser
@@ -24,9 +24,9 @@ spec:
     messageMigration: false
   console:
     expose: true
-    sslEnabled: true
-    sslSecret: ym-secret
-    useClientAuth: true
+    #sslEnabled: true
+    #sslSecret: ym-secret
+    #useClientAuth: true
   acceptors:
     #- name: all-protocol
       #protocols: all
@@ -34,15 +34,33 @@ spec:
     - name: my
       protocols: amqp
       port: 5672
-      sslEnabled: false
+      sslEnabled: true
       #sslSecret: ym-secret
-      expose: false
-  #connectors:
-    #- name: my-c
-      #host: localhost
-      #port: 22222
-      #sslEnabled: false
+      enabledCipherSuites: SSL_RSA_WITH_RC4_128_SHA,SSL_DH_anon_WITH_3DES_EDE_CBC_SHA
+      enabledProtocols: TLSv1,TLSv1.1,TLSv1.2
+      needClientAuth: true
+      wantClientAuth: true
+      verifyHost: true
+      sslProvider: JDK
+      sniHost: localhost
+      expose: true
+      anycastPrefix: jms.topic.
+      multicastPrefix: /queue/
+      #connectionsAllowed: 100
+  connectors:
+    - name: my-c
+      host: localhost
+      port: 22222
+      sslEnabled: true
       #sslSecret: c-ym-secret
+      enabledCipherSuites: SSL_RSA_WITH_RC4_128_SHA,SSL_DH_anon_WITH_3DES_EDE_CBC_SHA
+      enabledProtocols: TLSv1,TLSv1.1,TLSv1.2
+      needClientAuth: true
+      wantClientAuth: true
+      verifyHost: true
+      sslProvider: JDK
+      sniHost: localhost
+      expose: true
     #- name: second-c
       #host: 127.0.0.1
       #port: 33333
