ENTMQBR-2703: Shortened example naming triggering csv version bump 0.7.0 to 0.8.0

--- a/deploy/crds/broker_v2alpha1_activemqartemisaddress_crd.yaml
+++ b/deploy/crds/broker_v2alpha1_activemqartemisaddress_crd.yaml
@@ -23,6 +23,17 @@ spec:
         metadata:
           type: object
         spec:
+          properties:
+            addressName:
+              type: string
+            queueName:
+              type: string
+            routingType:
+              type: string
+          required:
+            - addressName
+            - queueName
+            - routingType
           type: object
         status:
           type: object
