--- a/deploy/catalog_resources/redhat/activemq-artemis-operator.v0.8.0.clusterserviceversion.yaml
+++ b/deploy/catalog_resources/redhat/activemq-artemis-operator.v0.8.0.clusterserviceversion.yaml
@@ -1,7 +1,7 @@
 apiVersion: operators.coreos.com/v1alpha1
 kind: ClusterServiceVersion
 metadata:
-  name: activemq-artemis-operator.v0.7.0
+  name: activemq-artemis-operator.v0.8.0
   namespace: placeholder
   annotations:
     categories: "Messaging"
@@ -16,10 +16,10 @@ metadata:
             "apiVersion": "broker.amq.io/v2alpha1",
             "kind": "ActiveMQArtemis",
             "metadata": {
-                "name": "example-activemqartemis",
+                "name": "ex-aao",
                 "labels": {
-                    "ActiveMQArtemis": "example-activemqartemis",
-                    "application": "example-activemqartemis-app"
+                    "ActiveMQArtemis": "ex-aao",
+                    "application": "ex-aao-app"
                 }
             },
             "spec": {
@@ -33,10 +33,10 @@ metadata:
             "apiVersion": "broker.amq.io/v2alpha1",
             "kind": "ActiveMQArtemisAddress",
             "metadata": {
-                "name": "example-activemqartemisaddress",
+                "name": "ex-aaoaddress",
                 "labels": {
-                    "ActiveMQArtemis": "example-activemqartemis",
-                    "application": "example-activemqartemis-app"
+                    "ActiveMQArtemis": "ex-aao",
+                    "application": "ex-aao-app"
                 }
             },
             "spec": {
@@ -53,9 +53,9 @@ spec:
   keywords:
     - activemqartemis
     - operator
-  version: 0.7.0
+  version: 0.8.0
   maturity: alpha
-  replaces: activemq-artemis-operator.v0.6.3
+  replaces: activemq-artemis-operator.v0.7.0
   maintainers:
     - name: Red Hat, Inc.
       email: rkieley@redhat.com
@@ -71,12 +71,12 @@ spec:
       mediatype: image/png
   labels:
     alm-owner-amq-broker: activemq-artemis-operator
-    operated-by: activemq-artemis-operator.v0.7.0
+    operated-by: activemq-artemis-operator.v0.8.0
   selector:
     matchLabels:
-      ActiveMQArtemis: example-activemqartemis
-      application: example-activemqartemis-app
-      operated-by: activemq-artemis-operator.v0.7.0
+      ActiveMQArtemis: ex-aao
+      application: ex-aao-app
+      operated-by: activemq-artemis-operator.v0.8.0
   installModes:
     - type: OwnNamespace
       supported: true
