--- a/deploy/catalog_resources/redhat/catalog-source.yaml
+++ b/deploy/catalog_resources/redhat/catalog-source.yaml
@@ -11,7 +11,7 @@ items:
         - apiVersion: operators.coreos.com/v1alpha1
           kind: ClusterServiceVersion
           metadata:
-            name: activemq-artemis-operator.v0.7.0
+            name: activemq-artemis-operator.v0.8.0
             namespace: placeholder
             annotations:
               categories: "Messaging"
@@ -26,10 +26,10 @@ items:
                       "apiVersion": "broker.amq.io/v2alpha1",
                       "kind": "ActiveMQArtemis",
                       "metadata": {
-                          "name": "example-activemqartemis",
+                          "name": "ex-aao",
                           "labels": {
-                              "ActiveMQArtemis": "example-activemqartemis",
-                              "application": "example-activemqartemis-app"
+                              "ActiveMQArtemis": "ex-aao",
+                              "application": "ex-aao-app"
                           }
                       },
                       "spec": {
@@ -43,10 +43,10 @@ items:
                       "apiVersion": "broker.amq.io/v2alpha1",
                       "kind": "ActiveMQArtemisAddress",
                       "metadata": {
-                          "name": "example-activemqartemisaddress",
+                          "name": "ex-aaoaddress",
                           "labels": {
-                              "ActiveMQArtemis": "example-activemqartemis",
-                              "application": "example-activemqartemis-app"
+                              "ActiveMQArtemis": "ex-aao",
+                              "application": "ex-aao-app"
                           }
                       },
                       "spec": {
@@ -63,9 +63,9 @@ items:
             keywords:
               - activemqartemis
               - operator
-            version: 0.7.0
+            version: 0.8.0
             maturity: alpha
-            replaces: activemq-artemis-operator.v0.6.3
+            replaces: activemq-artemis-operator.v0.7.0
             maintainers:
               - name: Red Hat, Inc.
                 email: rkieley@redhat.com
@@ -81,12 +81,12 @@ items:
                 mediatype: image/png
             labels:
               alm-owner-amq-broker: activemq-artemis-operator
-              operated-by: activemq-artemis-operator.v0.7.0
+              operated-by: activemq-artemis-operator.v0.8.0
             selector:
               matchLabels:
-                ActiveMQArtemis: example-activemqartemis
-                application: example-activemqartemis-app
-                operated-by: activemq-artemis-operator.v0.7.0
+                ActiveMQArtemis: ex-aao
+                application: ex-aao-app
+                operated-by: activemq-artemis-operator.v0.8.0
             installModes:
               - type: OwnNamespace
                 supported: true
@@ -460,11 +460,11 @@ items:
               served: false
               storage: false
       packages: >
-        - #! package-manifest: deploy/catalog_resources/redhat/activemq-artemis-operator.v0.7.0.clusterserviceversion.yaml
+        - #! package-manifest: deploy/catalog_resources/redhat/activemq-artemis-operator.v0.8.0.clusterserviceversion.yaml
           packageName: activemq-artemis
           channels:
             - name: alpha
-              currentCSV: activemq-artemis-operator.v0.7.0
+              currentCSV: activemq-artemis-operator.v0.8.0
 
   - apiVersion: operators.coreos.com/v1alpha1
     kind: CatalogSource
