--- a/deploy/crs/broker_v2alpha1_activemqartemis_cr.yaml
+++ b/deploy/crs/broker_v2alpha1_activemqartemis_cr.yaml
@@ -1,11 +1,11 @@
 apiVersion: broker.amq.io/v2alpha1
 kind: ActiveMQArtemis
 metadata:
-  name: example-activemqartemis
-  application: example-activemqartemis-app
+  name: ex-aao
+  application: ex-aao-app
   labels:
-    ActiveMQArtemis: example-activemqartemis
-    application: example-activemqartemis-app
+    ActiveMQArtemis: ex-aao
+    application: ex-aao-app
 spec:
   deploymentPlan:
     size: 0
@@ -19,9 +19,9 @@ spec:
     clustered: true
     #clusterUser: clusteruser1
     #clusterPassword: clusterpass1
-    persistenceEnabled: false
+    persistenceEnabled: true
     journalType: nio
-    messageMigration: false
+    messageMigration: true
   console:
     expose: true
     #sslEnabled: true
