--- a/deploy/crs/broker_v2alpha1_activemqartemisaddress_cr.yaml
+++ b/deploy/crs/broker_v2alpha1_activemqartemisaddress_cr.yaml
@@ -1,7 +1,7 @@
 apiVersion: broker.amq.io/v2alpha1
 kind: ActiveMQArtemisAddress
 metadata:
-  name: example-activemqartemisaddress
+  name: ex-aaoaddress
 spec:
   # Add fields here
   size: 3
