--- a/deploy/crs/broker_v2alpha1_activemqartemisscaledown_cr.yaml
+++ b/deploy/crs/broker_v2alpha1_activemqartemisscaledown_cr.yaml
@@ -1,10 +1,10 @@
 apiVersion: broker.amq.io/v2alpha1
 kind: ActiveMQArtemisScaledown
 metadata:
-  name: example-activemqartemisscaledown
+  name: ex-aaoscaledown
   labels:
-    ActiveMQArtemis: example-activemqartemis
-    application: example-activemqartemis-app
+    ActiveMQArtemis: ex-aao
+    application: ex-aao-app
 spec:
   # Add fields here
   localOnly: true
