--- a/deploy/examples/address-queue-create.yaml
+++ b/deploy/examples/address-queue-create.yaml
@@ -1,10 +1,10 @@
 apiVersion: broker.amq.io/v2alpha1
 kind: ActiveMQArtemisAddress
 metadata:
-  name: example-activemqartemisaddress
+  name: ex-aaoaddress
   labels:
-    ActiveMQArtemis: example-activemqartemis
-    application: example-activemqartemis-app
+    ActiveMQArtemis: ex-aao
+    application: ex-aao-app
 spec:
   # Add fields here
   addressName: myAddress0
