--- a/deploy/examples/artemis-persistence-deployment.yaml
+++ b/deploy/examples/artemis-persistence-deployment.yaml
@@ -1,10 +1,10 @@
 apiVersion: broker.amq.io/v2alpha1
 kind: ActiveMQArtemis
 metadata:
-  name: example-activemqartemis
+  name: ex-aao
   labels:
-    ActiveMQArtemis: example-activemqartemis
-    application: example-activemqartemis-app
+    ActiveMQArtemis: ex-aao
+    application: ex-aao-app
 spec:
   # Add fields here
   size: 4
