--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -16,7 +16,7 @@ spec:
       containers:
         - name: activemq-artemis-operator
           # Replace this with the built image name
-          image: quay.io/artemiscloud/activemq-artemis-operator:latest
+          image: quay.io/artemiscloud/activemq-artemis-operator:0.8.0
           command:
             - /home/activemq-artemis-operator/bin/entrypoint
           args:
