--- a/deploy/crs/broker_v2alpha1_activemqartemisaddress_cr.yaml
+++ b/deploy/crs/broker_v2alpha1_activemqartemisaddress_cr.yaml
@@ -2,6 +2,11 @@ apiVersion: broker.amq.io/v2alpha1
 kind: ActiveMQArtemisAddress
 metadata:
   name: ex-aaoaddress
+  labels:
+    ActiveMQArtemis: ex-aao
+    application: ex-aao-app
 spec:
   # Add fields here
-  size: 3
+  addressName: myAddress0
+  queueName: myQueue0
+  routingType: anycast
