--- a/deploy/catalog_resources/redhat/catalog-source.yaml
+++ b/deploy/catalog_resources/redhat/catalog-source.yaml
@@ -307,21 +307,9 @@ items:
                         password:
                           type: string
                           description: Password for standard broker user. It is required for connecting to the broker. If left empty, it will be generated.
-                        role:
-                          type: string
-                          description: Rolename for the given user
                         requireLogin:
                           type: boolean
                           description: If true require user password login credentials for broker protocol ports
-                        clustered:
-                          type: boolean
-                          description: If true brokers will cluster when scale > 1
-                        clusterUser:
-                          type: string
-                          description: Username used for clustering
-                        clusterPassword:
-                          type: string
-                          description: Password used for clustering
                         persistenceEnabled:
                           type: boolean
                           description: If true use persistent volume via persistent volume claim for journal storage
@@ -516,6 +504,7 @@ items:
         - apiVersion: apiextensions.k8s.io/v1beta1
           kind: CustomResourceDefinition
           metadata:
+            creationTimestamp: null
             name: activemqartemisscaledowns.broker.amq.io
           spec:
             group: broker.amq.io
