--- a/deploy/crds/broker_v2alpha1_activemqartemisscaledown_crd.yaml
+++ b/deploy/crds/broker_v2alpha1_activemqartemisscaledown_crd.yaml
@@ -1,6 +1,7 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
+  creationTimestamp: null
   name: activemqartemisscaledowns.broker.amq.io
 spec:
   group: broker.amq.io
@@ -33,6 +34,8 @@ spec:
               description: 'If enabled, the controller only handles StatefulSets in a
                 single namespace instead of across all namespaces.'
               type: boolean
+          required:
+            - localOnly
           type: object
         status:
           type: object
