--- a/deploy/catalog_resources/redhat/activemq-artemis-operator.v0.9.0.clusterserviceversion.yaml
+++ b/deploy/catalog_resources/redhat/activemq-artemis-operator.v0.9.0.clusterserviceversion.yaml
@@ -1,61 +1,76 @@
 apiVersion: operators.coreos.com/v1alpha1
 kind: ClusterServiceVersion
 metadata:
-  name: activemq-artemis-operator.v0.8.0
+  name: activemq-artemis-operator.v0.9.0
   namespace: placeholder
   annotations:
-    categories: "Messaging"
+    categories: "Streaming & Messaging"
     certified: "false"
-    description: ActiveMQ Artemis Operator can deploy headless service environments which exposed each of the ports, along with the statefulset.
-    containerImage: quay.io/artemiscloud/activemq-artemis-operator:latest
-    createdAt: 2019-07-04T15:55:00Z
+    description: ActiveMQ Artemis Operator provides the ability to deploy and manage stateful ActiveMQ Artemis broker clusters
+    containerImage: quay.io/artemiscloud/activemq-artemis-operator:0.9.0
+    createdAt: 2019-12-09T08:16:32Z
+    capabilities: Seamless Upgrades
+    repository: https://github.com/rh-messaging/activemq-artemis-operator
     support: Red Hat, Inc.
     tectonic-visibility: ocs
     alm-examples: >-
-        [{
-            "apiVersion": "broker.amq.io/v2alpha1",
-            "kind": "ActiveMQArtemis",
-            "metadata": {
-                "name": "ex-aao",
-                "labels": {
-                    "ActiveMQArtemis": "ex-aao",
-                    "application": "ex-aao-app"
-                }
-            },
-            "spec": {
-                "deploymentPlan": {
-                    "size": 1,
-                    "image": "registry.redhat.io/amq7/amq-broker:7.5"
-                }
-            }
-        },
-        {
-            "apiVersion": "broker.amq.io/v2alpha1",
-            "kind": "ActiveMQArtemisAddress",
-            "metadata": {
-                "name": "ex-aaoaddress",
-                "labels": {
-                    "ActiveMQArtemis": "ex-aao",
-                    "application": "ex-aao-app"
-                }
-            },
-            "spec": {
-                "addressName": "myAddress0",
-                "queueName": "myQueue0",
-                "routingType": "anycast"
-            }
-        }]
-  labels:
-    operator-activemqartemis: "true"
+      [{
+          "apiVersion": "broker.amq.io/v2alpha1",
+          "kind": "ActiveMQArtemis",
+          "metadata": {
+              "name": "ex-aao",
+              "labels": {
+                  "ActiveMQArtemis": "ex-aao",
+                  "application": "ex-aao-app"
+              }
+          },
+          "spec": {
+              "deploymentPlan": {
+                  "size": 1,
+                  "image": "quay.io/artemiscloud/activemq-artemis-openshift-image:2.11"
+              }
+          }
+      },
+      {
+          "apiVersion": "broker.amq.io/v2alpha1",
+          "kind": "ActiveMQArtemisAddress",
+          "metadata": {
+              "name": "ex-aaoaddress",
+              "labels": {
+                  "ActiveMQArtemis": "ex-aao",
+                  "application": "ex-aao-app"
+              }
+          },
+          "spec": {
+              "addressName": "myAddress0",
+              "queueName": "myQueue0",
+              "routingType": "anycast"
+          }
+      },
+      {
+          "apiVersion": "broker.amq.io/v2alpha1",
+          "kind": "ActiveMQArtemisScaledown",
+          "metadata": {
+              "name": "ex-aaoscaledown",
+              "labels": {
+                  "ActiveMQArtemis": "ex-aao",
+                  "application": "ex-aao-app"
+              }
+          },
+          "spec": {
+              "localOnly": "true"
+          }
+      }]
+labels:
+  operator-activemqartemis: "true"
 spec:
   displayName: ActiveMQ Artemis
-  description: ActiveMQ Artemis Operator deploys the ActiveMQ Artemis broker or brokers on OpenShift via a statefulset.
+  description: ActiveMQ Artemis Operator provides the ability to deploy and manage stateful ActiveMQ Artemis broker clusters
   keywords:
     - activemqartemis
     - operator
-  version: 0.8.0
+  version: 0.9.0
   maturity: alpha
-  replaces: activemq-artemis-operator.v0.7.0
   maintainers:
     - name: Red Hat, Inc.
       email: rkieley@redhat.com
@@ -71,12 +86,12 @@ spec:
       mediatype: image/png
   labels:
     alm-owner-amq-broker: activemq-artemis-operator
-    operated-by: activemq-artemis-operator.v0.8.0
+    operated-by: activemq-artemis-operator.v0.9.0
   selector:
     matchLabels:
       ActiveMQArtemis: ex-aao
       application: ex-aao-app
-      operated-by: activemq-artemis-operator.v0.8.0
+      operated-by: activemq-artemis-operator.v0.9.0
   installModes:
     - type: OwnNamespace
       supported: true
@@ -110,9 +125,12 @@ spec:
           - kind: Secret
             version: v1
         specDescriptors:
-          - description: The settings required for the broker to be deployed
-            displayName: DeploymentPlan
-            path: deploymentPlan
+          - description: User name for standard broker user. It is required for connecting to the broker and the web console. If left empty, it will be generated.
+            displayName: AdminUser
+            path: adminUser
+          - description: Password for standard broker user. It is required for connecting to the broker and the web console. If left empty, it will be generated.
+            displayName: AdminPassword
+            path: adminPassword
           - description: The number of broker pods to deploy
             displayName: Size
             path: size
@@ -120,19 +138,16 @@ spec:
             displayName: Image
             path: image
           - description: If true require user password login credentials for broker protocol ports
-            displayName: boolean
+            displayName: RequireLogin
             path: requireLogin
-          - description: If true brokers will cluster when scale > 1
-            displayName: boolean
-            path: clustered
           - description: If true use persistent volume via persistent volume claim for journal storage
-            displayName: boolean
+            displayName: PersistenceEnabled
             path: persistenceEnabled
           - description: If aio use ASYNCIO, if nio use NIO for journal IO
-            displayName: string
+            displayName: JournalType
             path: journalType
           - description: If true migrate messages on scaledown
-            displayName: boolean
+            displayName: MessageMigration
             path: messageMigration
       - name: activemqartemisaddresses.broker.amq.io
         version: v2alpha1
@@ -155,9 +170,9 @@ spec:
         description: Provides message migration on clustered broker scaledown
         displayName: ActiveMQ Artemis Scaledown
         specDescriptors:
-          - displayName: Local Namespace Only
+          - description: Triggered by main ActiveMQArtemis CRD messageMigration entry
+            displayName: LocalOnly
             path: localOnly
-            description: Triggered by main ActiveMQArtemis CRD messageMigration entry
   install:
     strategy: deployment
     spec:
@@ -233,8 +248,7 @@ spec:
                 serviceAccountName: activemq-artemis-operator
                 containers:
                   - name: activemq-artemis-operator
-                    # Replace this with the built image name
-                    image: quay.io/artemiscloud/activemq-artemis-operator:0.8.0
+                    image: quay.io/artemiscloud/activemq-artemis-operator:0.9.0
                     command:
                       -  /home/activemq-artemis-operator/bin/entrypoint
                     imagePullPolicy: Always
