--- a/deploy/catalog_resources/redhat/catalog-source.yaml
+++ b/deploy/catalog_resources/redhat/catalog-source.yaml
@@ -11,61 +11,76 @@ items:
         - apiVersion: operators.coreos.com/v1alpha1
           kind: ClusterServiceVersion
           metadata:
-            name: activemq-artemis-operator.v0.8.0
+            name: activemq-artemis-operator.v0.9.0
             namespace: placeholder
             annotations:
-              categories: "Messaging"
+              categories: "Streaming & Messaging"
               certified: "false"
-              description: ActiveMQ Artemis Operator can deploy headless service environments which exposed each of the ports, along with the statefulset.
-              containerImage: quay.io/artemiscloud/activemq-artemis-operator:latest
-              createdAt: 2019-07-04T15:55:00Z
+              description: ActiveMQ Artemis Operator provides the ability to deploy and manage stateful ActiveMQ Artemis broker clusters
+              containerImage: quay.io/artemiscloud/activemq-artemis-operator:0.9.0
+              createdAt: 2019-12-09T08:16:32Z
+              capabilities: Seamless Upgrades
+              repository: https://github.com/rh-messaging/activemq-artemis-operator
               support: Red Hat, Inc.
               tectonic-visibility: ocs
               alm-examples: >-
-                  [{
-                      "apiVersion": "broker.amq.io/v2alpha1",
-                      "kind": "ActiveMQArtemis",
-                      "metadata": {
-                          "name": "ex-aao",
-                          "labels": {
-                              "ActiveMQArtemis": "ex-aao",
-                              "application": "ex-aao-app"
-                          }
-                      },
-                      "spec": {
-                          "deploymentPlan": {
-                              "size": 1,
-                              "image": "registry.redhat.io/amq7/amq-broker:7.5"
-                          }
-                      }
-                  },
-                  {
-                      "apiVersion": "broker.amq.io/v2alpha1",
-                      "kind": "ActiveMQArtemisAddress",
-                      "metadata": {
-                          "name": "ex-aaoaddress",
-                          "labels": {
-                              "ActiveMQArtemis": "ex-aao",
-                              "application": "ex-aao-app"
-                          }
-                      },
-                      "spec": {
-                          "addressName": "myAddress0",
-                          "queueName": "myQueue0",
-                          "routingType": "anycast"
-                      }
-                  }]
-            labels:
-              operator-activemqartemis: "true"
+                [{
+                    "apiVersion": "broker.amq.io/v2alpha1",
+                    "kind": "ActiveMQArtemis",
+                    "metadata": {
+                        "name": "ex-aao",
+                        "labels": {
+                            "ActiveMQArtemis": "ex-aao",
+                            "application": "ex-aao-app"
+                        }
+                    },
+                    "spec": {
+                        "deploymentPlan": {
+                            "size": 1,
+                            "image": "quay.io/artemiscloud/activemq-artemis-openshift-image:2.11"
+                        }
+                    }
+                },
+                {
+                    "apiVersion": "broker.amq.io/v2alpha1",
+                    "kind": "ActiveMQArtemisAddress",
+                    "metadata": {
+                        "name": "ex-aaoaddress",
+                        "labels": {
+                            "ActiveMQArtemis": "ex-aao",
+                            "application": "ex-aao-app"
+                        }
+                    },
+                    "spec": {
+                        "addressName": "myAddress0",
+                        "queueName": "myQueue0",
+                        "routingType": "anycast"
+                    }
+                },
+                {
+                    "apiVersion": "broker.amq.io/v2alpha1",
+                    "kind": "ActiveMQArtemisScaledown",
+                    "metadata": {
+                        "name": "ex-aaoscaledown",
+                        "labels": {
+                            "ActiveMQArtemis": "ex-aao",
+                            "application": "ex-aao-app"
+                        }
+                    },
+                    "spec": {
+                        "localOnly": "true"
+                    }
+                }]
+          labels:
+            operator-activemqartemis: "true"
           spec:
             displayName: ActiveMQ Artemis
-            description: ActiveMQ Artemis Operator deploys the ActiveMQ Artemis broker or brokers on OpenShift via a statefulset.
+            description: ActiveMQ Artemis Operator provides the ability to deploy and manage stateful ActiveMQ Artemis broker clusters
             keywords:
               - activemqartemis
               - operator
-            version: 0.8.0
+            version: 0.9.0
             maturity: alpha
-            replaces: activemq-artemis-operator.v0.7.0
             maintainers:
               - name: Red Hat, Inc.
                 email: rkieley@redhat.com
@@ -81,12 +96,12 @@ items:
                 mediatype: image/png
             labels:
               alm-owner-amq-broker: activemq-artemis-operator
-              operated-by: activemq-artemis-operator.v0.8.0
+              operated-by: activemq-artemis-operator.v0.9.0
             selector:
               matchLabels:
                 ActiveMQArtemis: ex-aao
                 application: ex-aao-app
-                operated-by: activemq-artemis-operator.v0.8.0
+                operated-by: activemq-artemis-operator.v0.9.0
             installModes:
               - type: OwnNamespace
                 supported: true
@@ -120,9 +135,12 @@ items:
                     - kind: Secret
                       version: v1
                   specDescriptors:
-                    - description: The settings required for the broker to be deployed
-                      displayName: DeploymentPlan
-                      path: deploymentPlan
+                    - description: User name for standard broker user. It is required for connecting to the broker and the web console. If left empty, it will be generated.
+                      displayName: AdminUser
+                      path: adminUser
+                    - description: Password for standard broker user. It is required for connecting to the broker and the web console. If left empty, it will be generated.
+                      displayName: AdminPassword
+                      path: adminPassword
                     - description: The number of broker pods to deploy
                       displayName: Size
                       path: size
@@ -130,19 +148,16 @@ items:
                       displayName: Image
                       path: image
                     - description: If true require user password login credentials for broker protocol ports
-                      displayName: boolean
+                      displayName: RequireLogin
                       path: requireLogin
-                    - description: If true brokers will cluster when scale > 1
-                      displayName: boolean
-                      path: clustered
                     - description: If true use persistent volume via persistent volume claim for journal storage
-                      displayName: boolean
+                      displayName: PersistenceEnabled
                       path: persistenceEnabled
                     - description: If aio use ASYNCIO, if nio use NIO for journal IO
-                      displayName: string
+                      displayName: JournalType
                       path: journalType
                     - description: If true migrate messages on scaledown
-                      displayName: boolean
+                      displayName: MessageMigration
                       path: messageMigration
                 - name: activemqartemisaddresses.broker.amq.io
                   version: v2alpha1
@@ -165,9 +180,9 @@ items:
                   description: Provides message migration on clustered broker scaledown
                   displayName: ActiveMQ Artemis Scaledown
                   specDescriptors:
-                    - displayName: Local Namespace Only
+                    - description: Triggered by main ActiveMQArtemis CRD messageMigration entry
+                      displayName: LocalOnly
                       path: localOnly
-                      description: Triggered by main ActiveMQArtemis CRD messageMigration entry
             install:
               strategy: deployment
               spec:
@@ -243,8 +258,7 @@ items:
                           serviceAccountName: activemq-artemis-operator
                           containers:
                             - name: activemq-artemis-operator
-                              # Replace this with the built image name
-                              image: quay.io/artemiscloud/activemq-artemis-operator:0.8.0
+                              image: quay.io/artemiscloud/activemq-artemis-operator:0.9.0
                               command:
                                 -  /home/activemq-artemis-operator/bin/entrypoint
                               imagePullPolicy: Always
@@ -290,6 +304,12 @@ items:
                   metadata:
                     type: object
                   spec:
+                    adminUser:
+                      type: string
+                      description: User name for standard broker user. It is required for connecting to the broker. If left empty, it will be generated.
+                    adminPassword:
+                      type: string
+                      description: Password for standard broker user. It is required for connecting to the broker. If left empty, it will be generated.
                     deploymentPlan:
                       type: object
                       properties:
@@ -301,12 +321,6 @@ items:
                           minimum: 0
                           maximum: 16
                           description: The number of broker pods to deploy
-                        user:
-                          type: string
-                          description: User name for standard broker user. It is required for connecting to the broker. If left empty, it will be generated.
-                        password:
-                          type: string
-                          description: Password for standard broker user. It is required for connecting to the broker. If left empty, it will be generated.
                         requireLogin:
                           type: boolean
                           description: If true require user password login credentials for broker protocol ports
@@ -442,6 +456,24 @@ items:
                           type: boolean
                           description: If the embedded server requires client authentication
                   status:
+                    properties:
+                      podStatus:
+                        properties:
+                          ready:
+                            items:
+                              type: string
+                            type: array
+                          starting:
+                            items:
+                              type: string
+                            type: array
+                          stopped:
+                            items:
+                              type: string
+                            type: array
+                        type: object
+                    required:
+                      - podStatus
                     type: object
             version: v2alpha1
             versions:
@@ -537,6 +569,8 @@ items:
                         description: 'If enabled, the controller only handles StatefulSets in a
                           single namespace instead of across all namespaces.'
                         type: boolean
+                    required:
+                      - localOnly
                     type: object
                   status:
                     type: object
@@ -549,11 +583,10 @@ items:
               served: false
               storage: false
       packages: >
-        - #! package-manifest: deploy/catalog_resources/redhat/activemq-artemis-operator.v0.8.0.clusterserviceversion.yaml
-          packageName: activemq-artemis
+        - packageName: activemq-artemis
           channels:
             - name: alpha
-              currentCSV: activemq-artemis-operator.v0.8.0
+              currentCSV: activemq-artemis-operator.v0.9.0
 
   - apiVersion: operators.coreos.com/v1alpha1
     kind: CatalogSource
