--- a/deploy/examples/artemis-aio-journal.yaml
+++ b/deploy/examples/artemis-aio-journal.yaml
@@ -2,16 +2,8 @@ apiVersion: broker.amq.io/v2alpha1
 kind: ActiveMQArtemis
 metadata:
   name: ex-aao
-  labels:
-    ActiveMQArtemis: ex-aao
-    application: ex-aao-app
 spec:
-  # Add fields here
-  size: 2
-  image: registry.redhat.io/amq7/amq-broker:7.4
-  persistent: true
-  aio: true
-  commonConfig:
-    userName: admin
-    password: admin
-
+  deploymentPlan:
+    size: 1
+    image: registry.redhat.io/amq7/amq-broker:7.5
+    journalType: aio
