--- a/deploy/examples/artemis-basic-deployment.yaml
+++ b/deploy/examples/artemis-basic-deployment.yaml
@@ -2,14 +2,7 @@ apiVersion: broker.amq.io/v2alpha1
 kind: ActiveMQArtemis
 metadata:
   name: ex-aao
-  labels:
-    ActiveMQArtemis: ex-aao
-    application: ex-aao-app
 spec:
-  # Add fields here
-  size: 4
-  image: registry.redhat.io/amq7/amq-broker:7.4
-  commonConfig:
-    userName: admin
-    password: admin
-
+  deploymentPlan:
+    size: 1
+    image: registry.redhat.io/amq7/amq-broker:7.5
