--- a/deploy/examples/artemis-ssl-deployment.yaml
+++ b/deploy/examples/artemis-ssl-deployment.yaml
@@ -2,9 +2,12 @@ apiVersion: broker.amq.io/v2alpha1
 kind: ActiveMQArtemis
 metadata:
   name: ex-aao
-  labels:
-    ActiveMQArtemis: ex-aao
-    application: ex-aao-app
 spec:
-  size: 4
-  image: registry.redhat.io/amq7/amq-broker:7.4
+  deploymentPlan:
+    size: 1
+    image: registry.redhat.io/amq7/amq-broker:7.5
+  acceptors:
+  - name: amqp
+    protocols: amqp
+    port: 5672
+    sslEnabled: true
