--- a/deploy/examples/artemis-ssl-persistence-deployment.yaml
+++ b/deploy/examples/artemis-ssl-persistence-deployment.yaml
@@ -2,11 +2,14 @@ apiVersion: broker.amq.io/v2alpha1
 kind: ActiveMQArtemis
 metadata:
   name: ex-aao
-  labels:
-    ActiveMQArtemis: ex-aao
-    application: ex-aao-app
 spec:
-  # Add fields here
-  size: 4
-  image: registry.redhat.io/amq7/amq-broker:7.4
-  persistent: true
+  deploymentPlan:
+    size: 1
+    image: registry.redhat.io/amq7/amq-broker:7.5
+    persistenceEnabled: true
+    messageMigration: true
+  acceptors:
+  - name: amqp
+    protocols: amqp
+    port: 5672
+    sslEnabled: true
