ENTMQBR-2923: 0.9.0 to 0.9.1 as addressed ENTMQBRs 2911 2916 and 2921

--- a/deploy/catalog_resources/redhat/activemq-artemis-operator.v0.9.1.clusterserviceversion.yaml
+++ b/deploy/catalog_resources/redhat/activemq-artemis-operator.v0.9.1.clusterserviceversion.yaml
@@ -1,13 +1,13 @@
 apiVersion: operators.coreos.com/v1alpha1
 kind: ClusterServiceVersion
 metadata:
-  name: activemq-artemis-operator.v0.9.0
+  name: activemq-artemis-operator.v0.9.1
   namespace: placeholder
   annotations:
     categories: "Streaming & Messaging"
     certified: "false"
     description: ActiveMQ Artemis Operator provides the ability to deploy and manage stateful ActiveMQ Artemis broker clusters
-    containerImage: quay.io/artemiscloud/activemq-artemis-operator:0.9.0
+    containerImage: quay.io/artemiscloud/activemq-artemis-operator:0.9.1
     createdAt: 2019-12-09T08:16:32Z
     capabilities: Basic Install
     repository: https://github.com/rh-messaging/activemq-artemis-operator
@@ -18,11 +18,7 @@ metadata:
           "apiVersion": "broker.amq.io/v2alpha1",
           "kind": "ActiveMQArtemis",
           "metadata": {
-              "name": "ex-aao",
-              "labels": {
-                  "ActiveMQArtemis": "ex-aao",
-                  "application": "ex-aao-app"
-              }
+              "name": "ex-aao"
           },
           "spec": {
               "deploymentPlan": {
@@ -35,11 +31,7 @@ metadata:
           "apiVersion": "broker.amq.io/v2alpha1",
           "kind": "ActiveMQArtemisAddress",
           "metadata": {
-              "name": "ex-aaoaddress",
-              "labels": {
-                  "ActiveMQArtemis": "ex-aao",
-                  "application": "ex-aao-app"
-              }
+              "name": "ex-aaoaddress"
           },
           "spec": {
               "addressName": "myAddress0",
@@ -51,11 +43,7 @@ metadata:
           "apiVersion": "broker.amq.io/v2alpha1",
           "kind": "ActiveMQArtemisScaledown",
           "metadata": {
-              "name": "ex-aaoscaledown",
-              "labels": {
-                  "ActiveMQArtemis": "ex-aao",
-                  "application": "ex-aao-app"
-              }
+              "name": "ex-aaoscaledown"
           },
           "spec": {
               "localOnly": "true"
@@ -69,7 +57,7 @@ spec:
   keywords:
     - activemqartemis
     - operator
-  version: 0.9.0
+  version: 0.9.1
   maturity: alpha
   maintainers:
     - name: Red Hat, Inc.
@@ -86,12 +74,12 @@ spec:
       mediatype: image/png
   labels:
     alm-owner-amq-broker: activemq-artemis-operator
-    operated-by: activemq-artemis-operator.v0.9.0
+    operated-by: activemq-artemis-operator.v0.9.1
   selector:
     matchLabels:
       ActiveMQArtemis: ex-aao
       application: ex-aao-app
-      operated-by: activemq-artemis-operator.v0.9.0
+      operated-by: activemq-artemis-operator.v0.9.1
   installModes:
     - type: OwnNamespace
       supported: true
@@ -248,7 +236,7 @@ spec:
                 serviceAccountName: activemq-artemis-operator
                 containers:
                   - name: activemq-artemis-operator
-                    image: quay.io/artemiscloud/activemq-artemis-operator:0.9.0
+                    image: quay.io/artemiscloud/activemq-artemis-operator:0.9.1
                     command:
                       -  /home/activemq-artemis-operator/bin/entrypoint
                     imagePullPolicy: Always
