--- a/deploy/catalog_resources/redhat/catalog-source.yaml
+++ b/deploy/catalog_resources/redhat/catalog-source.yaml
@@ -11,13 +11,13 @@ items:
         - apiVersion: operators.coreos.com/v1alpha1
           kind: ClusterServiceVersion
           metadata:
-            name: activemq-artemis-operator.v0.9.0
+            name: activemq-artemis-operator.v0.9.1
             namespace: placeholder
             annotations:
               categories: "Streaming & Messaging"
               certified: "false"
               description: ActiveMQ Artemis Operator provides the ability to deploy and manage stateful ActiveMQ Artemis broker clusters
-              containerImage: quay.io/artemiscloud/activemq-artemis-operator:0.9.0
+              containerImage: quay.io/artemiscloud/activemq-artemis-operator:0.9.1
               createdAt: 2019-12-09T08:16:32Z
               capabilities: Basic Install
               repository: https://github.com/rh-messaging/activemq-artemis-operator
@@ -28,11 +28,7 @@ items:
                     "apiVersion": "broker.amq.io/v2alpha1",
                     "kind": "ActiveMQArtemis",
                     "metadata": {
-                        "name": "ex-aao",
-                        "labels": {
-                            "ActiveMQArtemis": "ex-aao",
-                            "application": "ex-aao-app"
-                        }
+                        "name": "ex-aao"
                     },
                     "spec": {
                         "deploymentPlan": {
@@ -45,11 +41,7 @@ items:
                     "apiVersion": "broker.amq.io/v2alpha1",
                     "kind": "ActiveMQArtemisAddress",
                     "metadata": {
-                        "name": "ex-aaoaddress",
-                        "labels": {
-                            "ActiveMQArtemis": "ex-aao",
-                            "application": "ex-aao-app"
-                        }
+                        "name": "ex-aaoaddress"
                     },
                     "spec": {
                         "addressName": "myAddress0",
@@ -61,11 +53,7 @@ items:
                     "apiVersion": "broker.amq.io/v2alpha1",
                     "kind": "ActiveMQArtemisScaledown",
                     "metadata": {
-                        "name": "ex-aaoscaledown",
-                        "labels": {
-                            "ActiveMQArtemis": "ex-aao",
-                            "application": "ex-aao-app"
-                        }
+                        "name": "ex-aaoscaledown"
                     },
                     "spec": {
                         "localOnly": "true"
@@ -79,7 +67,7 @@ items:
             keywords:
               - activemqartemis
               - operator
-            version: 0.9.0
+            version: 0.9.1
             maturity: alpha
             maintainers:
               - name: Red Hat, Inc.
@@ -96,12 +84,12 @@ items:
                 mediatype: image/png
             labels:
               alm-owner-amq-broker: activemq-artemis-operator
-              operated-by: activemq-artemis-operator.v0.9.0
+              operated-by: activemq-artemis-operator.v0.9.1
             selector:
               matchLabels:
                 ActiveMQArtemis: ex-aao
                 application: ex-aao-app
-                operated-by: activemq-artemis-operator.v0.9.0
+                operated-by: activemq-artemis-operator.v0.9.1
             installModes:
               - type: OwnNamespace
                 supported: true
@@ -258,7 +246,7 @@ items:
                           serviceAccountName: activemq-artemis-operator
                           containers:
                             - name: activemq-artemis-operator
-                              image: quay.io/artemiscloud/activemq-artemis-operator:0.9.0
+                              image: quay.io/artemiscloud/activemq-artemis-operator:0.9.1
                               command:
                                 -  /home/activemq-artemis-operator/bin/entrypoint
                               imagePullPolicy: Always
@@ -586,7 +574,7 @@ items:
         - packageName: activemq-artemis
           channels:
             - name: alpha
-              currentCSV: activemq-artemis-operator.v0.9.0
+              currentCSV: activemq-artemis-operator.v0.9.1
 
   - apiVersion: operators.coreos.com/v1alpha1
     kind: CatalogSource
