restructure bundle_dir for multiple csv versions and upgrade support
Signed-off-by: Abdul Hameed <ahameed@redhat.com>

--- a/deploy/crs/broker_v2alpha1_activemqartemis_cr.yaml
+++ b/deploy/crs/broker_v2alpha1_activemqartemis_cr.yaml
@@ -4,6 +4,7 @@ metadata:
   name: ex-aao
   application: ex-aao-app
 spec:
+  version: 7.5.0
   deploymentPlan:
     size: 2
     image: quay.io/artemiscloud/activemq-artemis-operator:latest
@@ -41,3 +42,7 @@ spec:
       sslProvider: JDK
       sniHost: localhost
       expose: true
+  upgrades:
+      enabled: true
+      minor: true
+
