ENTMQBR-3183: Restored x86_64 latest ubi8 and prepared for new broker version

--- a/deploy/crs/broker_v2alpha1_activemqartemis_cr.yaml
+++ b/deploy/crs/broker_v2alpha1_activemqartemis_cr.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   deploymentPlan:
     size: 2
-    image: registry.redhat.io/amq7/amq-broker:7.5
+    image: quay.io/artemiscloud/activemq-artemis-operator:latest
     requireLogin: false
     persistenceEnabled: false
     journalType: nio
