--- a/deploy/examples/artemis-aio-journal.yaml
+++ b/deploy/examples/artemis-aio-journal.yaml
@@ -5,5 +5,5 @@ metadata:
 spec:
   deploymentPlan:
     size: 1
-    image: registry.redhat.io/amq7/amq-broker:7.5
+    image: quay.io/artemiscloud/activemq-artemis-operator:latest
     journalType: aio
