--- a/deploy/examples/artemis-persistence-deployment.yaml
+++ b/deploy/examples/artemis-persistence-deployment.yaml
@@ -5,6 +5,6 @@ metadata:
 spec:
   deploymentPlan:
     size: 1
-    image: registry.redhat.io/amq7/amq-broker:7.5
+    image: quay.io/artemiscloud/activemq-artemis-operator:latest
     persistenceEnabled: true
     messageMigration: true
