--- a/deploy/examples/artemis-ssl-deployment.yaml
+++ b/deploy/examples/artemis-ssl-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   deploymentPlan:
     size: 1
-    image: registry.redhat.io/amq7/amq-broker:7.5
+    image: quay.io/artemiscloud/activemq-artemis-operator:latest
   acceptors:
   - name: amqp
     protocols: amqp
