--- a/deploy/olm-catalog/activemq-artemis-operator/0.11.0/activemq-artemis-operator.v0.11.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/activemq-artemis-operator/0.11.0/activemq-artemis-operator.v0.11.0.clusterserviceversion.yaml
@@ -51,6 +51,8 @@ metadata:
       }]
 labels:
   operator-activemqartemis: "true"
+  operatorframework.io/arch.amd64: supported
+  operatorframework.io/arch.s390x: supported
 spec:
   displayName: ActiveMQ Artemis
   description: ActiveMQ Artemis Operator provides the ability to deploy and manage stateful ActiveMQ Artemis broker clusters
